# skald

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SELF_HOSTED_DEPLOYMENT.md  chunker.py  components.json  conftest.py  docker-compose.ee.yml  docker-compose.prod.yml  docker-compose.selfhosted.yml  docker-compose.yml  eslint.config.js  extract_deps.py  fly.toml  foo  manage.py  mise.toml  nginx.conf  package.json  pnpm-lock.yaml  postgres.Dockerfile  push_mock_docs.py  pyproject.toml  test.py  test_filter_sql.py  test_filter_sql_executed.py  test_phase3.py  test_subscription_endpoints.py  tsconfig.app.json  tsconfig.json  tsconfig.node.json  ui.Dockerfile  ui.fly.toml  vite.config.ts
.cursor/rules/: docs.mdc  style.mdc
.github/workflows/: docker-build-push.yml  fly-deploy.yml  format.yml  skald-foss.yml  test.yml
backend/: Dockerfile  express.fly.toml  fly.toml  jest.config.js  memo-processing-server.fly.toml  nodemon.json  package.json  pnpm-lock.yaml  start.sh  todo  tsconfig.json
backend/docs/: pino-logging.md
backend/fixtures/: load-fixtures.ts  skald_plan.json
backend/public/: openapi.json
backend/src/: di.ts  expressServer.ts  global.d.ts  index.ts  llmModels.ts  memoProcessingServer.ts  mikro-orm.config.ts  sentry.ts  settings.ts  swagger.js
docker-init/: 02-init-pgmq.sql
docs/: api-overview.md  api-reference.md  chat.md  memo-processing-server.md  models.md  search.md  sqs-integration.md
ee/: Dockerfile  LICENSE  build-docker.sh  package.json  pnpm-lock.yaml  start.sh  tsconfig.json
ee/src/: chatUiConfig.ts  enterpriseServer.ts  index.ts
embedding-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
express-server/: SECURITY_AUDIT.md  jest.config.js  migration-docs.md  mikro-orm.config.ts  new.sql  old.sql  package.json  pnpm-lock.yaml  schema-comparison.md  todo  tsconfig.json
express-server/schema/: authtoken_token.sql  migrations.sql  skald_emailverificationcode.sql  skald_memo.sql  skald_memochunk.sql  skald_memocontent.sql  (+12 more)
frontend/: index.html
memo-processing-server/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  SQS_SETUP.md  fly.toml  package.json  pnpm-lock.yaml  sentry.ts
openapi/: chat.yaml  memo.yaml  search.yaml
skald/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
(+864 files in other folders)
