[project]
name = "skald"
version = "0.1.0"
description = "Knowledge infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.7.2",
    "certifi>=2024.2.2",
    "charset-normalizer>=3.3.2",
    "click>=8.1.8",
    "dj-database-url>=2.1.0",
    "Django>=5.0.2",
    "django-cors-headers>=4.3.1",
    "django-crontab>=0.7.1",
    "djangorestframework>=3.14.0",
    "drf-extensions>=0.7.1",
    "feedparser>=6.0.11",
    "gunicorn>=21.2.0",
    "idna>=3.6",
    "mypy-extensions>=1.0.0",
    "packaging>=23.2",
    "pathspec>=0.12.1",
    "platformdirs>=4.3.6",
    "psycopg2>=2.9.9",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "sgmllib3k>=1.0.0",
    "sqlparse>=0.4.4",
    "tomli>=2.2.1",
    "typing_extensions>=4.9.0",
    "urllib3>=2.2.1",
    "setuptools>=69.1.1",
    "chonkie>=1.1.1",
    "openai>=1.107.0",
    "openai-agents>=0.2.11",
    "pgvector>=0.4.1",
    "voyageai>=0.3.5",
    "redis>=6.4.0",
    "posthog>=6.7.6",
    "resend>=2.16.0",
    "langchain>=0.3.27,<1.0",
    "langchain-core>=0.3.79,<1.0",
    "langchain-community>=0.3.0,<1.0",
    "langchain-openai>=0.3.35,<1.0",
    "gevent>=25.9.1",
    "boto3>=1.35.0",
    "sentry-sdk[django]>=2.41.0",
    "stripe>=13.0.1",
    "pika>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pyflakes>=3.2.0",
    "pycodestyle>=2.12.1",
    "mccabe>=0.7.0",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "skald.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --reuse-db"
